examples/invalid/test32.alice

The room func () contained a number
opened
  Alice found 10.
closed

The looking-glass hatta ()
opened 
  arr had 10 number.
  what was arr?
  what was func?
closed
